# guix

./: .codespellrc  .dir-locals.el  .editorconfig  .gitignore  .gitlab-ci.yml  .guix-authorizations  .guix-channel  .mailmap  .patman  CODE-OF-CONDUCT  CODEOWNERS  Makefile.am  NEWS  README  Rutherther-69E471C3.key  SameExpert-5943A706.key  TODO  abcdw-6C328EC2.key  avp-0898A02F.key  baleine-0AB74043.key  bavier-AFCA8B8E.key  bootstrap  cnx-F3F6B767.key  config-daemon.ac  configure.ac  csantosb-F6BF6682.key  ekaitz-3F7356D6.key  fishinthecalculator-93B701E2.key  futurile-89CA9B07.key  gabber-4330FD7F.key  guix.scm  hako-408B4185.key  htgoebel-3A1F9D20.key  ieure-F1A71CF2.key  jgart-3B1D7F19.key  jpoiret-39248CD8.key  lfam-757F47FF.key  lilyp-C70E2F87.key  manifest.scm  monego-8065B68A.key  (+6 more)
.forgejo/: pull_request_template.md
.forgejo/issue_template/: bug-reporting.md  config.yaml
.mumi/: config
build-aux/: build-self.scm  check-final-inputs-self-contained.scm  compile-as-derivation.scm  extract-syscall-ranges.sh  keep-only-translated.scm  mdate-from-git.scm  pre-inst-env.in  test-driver.scm  test-env.in  update-guix-package.scm  xgettext.scm
build-aux/cuirass/: evaluate.scm
doc/: build.scm  contributing.texi  environment-gdb.scm  guix-cookbook.texi  guix.texi  he-config-bare-bones.scm  htmlxref.cnf  local.mk  package-hello.json
doc/images/: bootstrap-graph.dot  bootstrap-packages.dot  coreutils-bag-graph.dot  coreutils-graph.dot  gcc-core-mesboot0-graph.dot  service-graph.dot  shepherd-graph.dot
etc/: committer.scm.in  copyright.el  disarchive-manifest.scm  gnu-store.mount.in  guix-daemon.cil.in  guix-daemon.conf.in  guix-daemon.service.in  guix-install.sh  guix-publish.service.in  hurd-manifest.scm  kernels-manifest.scm  news.scm  release-manifest.scm  source-manifest.scm  system-tests.scm  teams.scm  teams.scm.in  time-travel-manifest.scm  upgrade-manifest.scm  usr.bin.guix-daemon
etc/apparmor.d/: guix  guix-daemon
etc/git/: commit-msg  gitconfig  post-merge  pre-push
etc/init.d/: guix-daemon.in
etc/manifests/: cross-compile.scm  disarchive.scm  hurd.scm  release-desktop.scm  release-minimal.scm  release-user-packages.scm  release.scm  system-tests.scm  time-travel.scm  ungraft.scm  upgrade.scm
gnu/: artwork.scm  bootloader.scm  ci.scm  compression.scm  home.scm  image.scm  installer.scm  local.mk  packages.scm  platform.scm  services.scm  system.scm  tests.scm
gnu/bootloader/: extlinux.scm  grub.scm  u-boot.scm
gnu/home/: services.scm
gnu/installer/: connman.scm  dump.scm  final.scm  hardware.scm  kernel.scm  locale.scm  newt.scm  parted.scm  record.scm  services.scm  steps.scm  tests.scm  user.scm  utils.scm
gnu/machine/: digital-ocean.scm  hetzner.scm  ssh.scm
gnu/services/: admin.scm  audio.scm  auditd.scm  authentication.scm  avahi.scm  backup.scm  base.scm  certbot.scm  cgit.scm  ci.scm  configuration.scm  containers.scm  cuirass.scm  cups.scm  databases.scm  dav.scm  dbus.scm  desktop.scm  dict.scm  dns.scm  docker.scm  file-sharing.scm  firmware.scm  forgejo.scm  games.scm  ganeti.scm  getmail.scm  guix.scm  herd.scm  high-availability.scm  kerberos.scm  ldap.scm  lightdm.scm  linux.scm  lirc.scm  mail.scm  mcron.scm  messaging.scm  monitoring.scm  networking.scm  (+25 more)
gnu/system/: accounts.scm  bootstrap.scm  file-systems.scm  hurd.scm  image.scm  install.scm  linux-container.scm  linux-initrd.scm  locale.scm  mapped-devices.scm  nss.scm  pam.scm  privilege.scm  setuid.scm  shadow.scm  uuid.scm  vm.scm
gnu/tests/: audio.scm  avahi.scm  base.scm  cachefilesd.scm  ci.scm  containers.scm  cups.scm  databases.scm  desktop.scm  dict.scm  dns.scm  docker.scm  emacs.scm  file-sharing.scm  foreign.scm  forgejo.scm  games.scm  ganeti.scm  gdm.scm  guix.scm  high-availability.scm  image.scm  install.scm  ldap.scm  lightdm.scm  linux.scm  mail.scm  mcron.scm  messaging.scm  monitoring.scm  networking.scm  nfs.scm  package-management.scm  pam.scm  reconfigure.scm  rsync.scm  samba.scm  sddm.scm  security-token.scm  security.scm  (+9 more)
guix/: amd-gpu.scm  android-repo-download.scm  avahi.scm  base32.scm  build-system.scm  bzr-download.scm  cache.scm  channels.scm  ci.scm  colors.scm  config.scm.in  cpio.scm  cpu.scm  cve.scm  cvs-download.scm  deprecation.scm  derivations.scm  describe.scm  diagnostics.scm  discovery.scm  docker.scm  download.scm  fossil-download.scm  ftp-client.scm  gexp.scm  git-authenticate.scm  git-download.scm  git.scm  glob.scm  gnu-maintenance.scm  gnupg.scm  grafts.scm  graph.scm  hash.scm  hg-download.scm  http-client.scm  inferior.scm  ipfs.scm  least-authority.scm  licenses.scm  (+35 more)
guix/build-system/: agda.scm  android-ndk.scm  ant.scm  asdf.scm  cargo.scm  channel.scm  chicken.scm  clojure.scm  cmake.scm  composer.scm  copy.scm  dub.scm  dune.scm  elm.scm  emacs.scm  font.scm  glib-or-gtk.scm  gnu.scm  go.scm  guile.scm  hare.scm  haskell.scm  julia.scm  linux-module.scm  luanti.scm  maven.scm  meson.scm  minetest.scm  minify.scm  mix.scm  mozilla.scm  node.scm  ocaml.scm  perl.scm  pyproject.scm  python.scm  qt.scm  r.scm  rakudo.scm  rebar.scm  (+9 more)
guix/import/: apache.scm  buildroot.scm  cabal.scm  composer.scm  cpan.scm  cran.scm  crate.scm  egg.scm  elm.scm  elpa.scm  gem.scm  git.scm  github.scm  gnome.scm  gnu.scm  go.scm  hackage.scm  hexpm.scm  json.scm  kde.scm  launchpad.scm  luanti.scm  minetest.scm  npm-binary.scm  nuget.scm  opam.scm  print.scm  pypi.scm  stackage.scm  test.scm  texlive.scm  (+1 more)
m4/: guix.m4
nix/: local.mk
tests/: accounts.scm  boot-parameters.scm  build-emacs-utils.scm  build-utils.scm  builders.scm  cache.scm  channels.scm  composer.scm  containers.scm  cpan.scm  cpio.scm  crate.scm  cve-sample.json  cve.scm  debug-link.scm  derivations.scm  ed25519.key  egg.scm  elm.scm  elpa.scm  file-systems.scm  gem.scm  gexp.scm  git-authenticate.scm  git.scm  glob.scm  gnu-maintenance.scm  go.scm  grafts.scm  graph.scm  gremlin.scm  guix-archive.sh  guix-authenticate.sh  guix-build-branch.sh  guix-build.sh  guix-daemon.sh  guix-describe.sh  guix-download.sh  guix-environment-container.sh  guix-environment.sh  (+69 more)
(+320 files in other folders)
